# Mlops_project_Group43

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  TRAINING_SETUP.md  docker-compose.yml  monitoring.html  pyproject.toml  requirements.txt  requirements_api.txt  requirements_frontend.txt  requirements_monitoring.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: deploy-api.yaml  docker-build.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml  vertex-ai-training.yaml
configs/: config.yaml  sweep.yaml
configs/experiment/: base_experiment.yaml  baseline.yaml  tuning.yaml
data/: processed.dvc
dockerfiles/: api.dockerfile  entrypoint.sh  frontend.dockerfile  monitoring.dockerfile  train.dockerfile
docs/: mkdocs.yaml  training_metrics.csv
docs/source/: index.md
lightning_logs/version_0/: metrics.csv
lightning_logs/version_1/: metrics.csv
logs/resnet_training/version_0/: hparams.yaml  metrics.csv
logs/resnet_training/version_1/: metrics.csv
models/: epoch=0-step=175.ckpt  epoch=1-step=350.ckpt  resnet_model.pt
reports/: README.md
scripts/: drift_robustness_eval.py  fetch_and_convert.sh  make_reference_features.py  monitoring_api.py
src/eye_deseases_classification/: cli.py  data.py  evaluate.py  model.py  train.py
src/eye_diseases_classification/: api.py  api_frontend.py  data.py  evaluate.py  export_onnx.py  frontend.py  logger.py  model.py  train.py  train_simple.py
src/eye_diseases_classification/conf/: README.md  config.yaml
src/eye_diseases_classification/conf/data/: __init__.py  default.yaml
src/eye_diseases_classification/conf/experiment/: __init__.py  high_lr.yaml  large_batch.yaml
src/eye_diseases_classification/conf/model/: __init__.py  resnet.yaml
src/eye_diseases_classification/conf/training/: __init__.py  default.yaml  fast.yaml
tests/: test_data.py  test_model.py
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py
tests/unittests/: test_data.py  test_model.py
