[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "eye-diseases-classification"
version = "0.0.1"
description = "Eye diseases classification using deep learning."
authors = [
  { name = "Group43", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi==0.115.6",
    "google-cloud-storage>=2.15.0",
    "google-cloud-run>=0.14.0",
    "httpx>=0.28.1",
    "hydra-core>=1.3.0",
    "locust>=2.43.1",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "omegaconf>=2.3.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.66.0",
    "streamlit>=1.53.0",
    "tqdm>=4.67.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.19.0",
    "evidently>=0.7.20",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
]


[[tool.uv.index]]
name = "pytorch_cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = false

[tool.uv.sources]
torch = [
    { index = "pytorch_cu124", marker = "sys_platform == 'linux'" },
    { index = "pypi", marker = "sys_platform != 'linux'" }  # Now this works!
]
torchvision = [
    { index = "pytorch_cu124", marker = "sys_platform == 'linux'" },
    { index = "pypi", marker = "sys_platform != 'linux'" }
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "eye_diseases_classification.train:main"
evaluate = "eye_diseases_classification.evaluate:evaluate"
visualize = "eye_diseases_classification.visualize:app"

[tool.uv]
index-strategy = "unsafe-best-match"
